# codon-sense-cli

./: .gitignore  pyproject.toml
codon/: __init__.py  __main__.py  app.py
docs/: PRD-biomarker-validation.md  Philosophy.md
